contrib/k8s/ckan.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckan
  labels:
    app: auctus
    what: ckan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auctus
      what: ckan
  template:
    metadata:
      labels:
        app: auctus
        what: ckan
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: ckan
        image: auctus_ckan
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /usr/src/app/ckan.json
          subPath: ckan.json
      volumes:
      - name: config
        configMap:
          name: ckan
