contrib/k8s/deployments.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-elasticsearch
  labels:
    app: datamart
    what: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-rabbitmq
  labels:
    app: datamart
    what: rabbitmq
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: remram/rabbitmq:3.7.8
        imagePullPolicy: Never
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-coordinator
  labels:
    app: datamart
    what: coordinator
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: coordinator
    spec:
      containers:
      - name: web
        image: datamart_coordinator
        imagePullPolicy: Never
        ports:
        - containerPort: 8001
          hostPort: 8001
        volumeMounts:
        - mountPath: /datasets
          name: datasets
      volumes:
      - name: datasets
        persistentVolumeClaim:
          claimName: datasets-pvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-query
  labels:
    app: datamart
    what: query
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: datamart
        what: query
    spec:
      containers:
      - name: web
        image: datamart_query
        imagePullPolicy: Never
        ports:
        - containerPort: 8002
        volumeMounts:
        - mountPath: /datasets
          name: datasets
        - mountPath: /cache
          name: cache
      volumes:
      - name: datasets
        persistentVolumeClaim:
          claimName: datasets-pvc
      - name: cache
        persistentVolumeClaim:
          claimName: cache-pvc
      terminationGracePeriodSeconds: 300
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-profiler
  labels:
    app: datamart
    what: profiler
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: datamart
        what: profiler
    spec:
      containers:
      - name: web
        image: datamart_profiler
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /datasets
          name: datasets
      volumes:
      - name: datasets
        persistentVolumeClaim:
          claimName: datasets-pvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dm-example-discoverer
  labels:
    app: datamart
    what: example-discoverer
    example: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: datamart
        what: example-discoverer
    spec:
      containers:
      - name: discoverer
        image: datamart_example_discoverer
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /datasets
          name: datasets
      volumes:
      - name: datasets
        persistentVolumeClaim:
          claimName: datasets-pvc
