contrib/k8s/socrata.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socrata
  labels:
    app: auctus
    what: socrata
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auctus
      what: socrata
  template:
    metadata:
      labels:
        app: auctus
        what: socrata
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: socrata
        image: auctus_socrata
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /usr/src/app/socrata.json
          subPath: socrata.json
      volumes:
      - name: config
        configMap:
          name: socrata
