contrib/k8s/uaz-indicators.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uaz-indicators
  labels:
    app: auctus
    what: uaz-indicators
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auctus
      what: uaz-indicators
  template:
    metadata:
      labels:
        app: auctus
        what: uaz-indicators
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: uaz-indicators
        image: auctus_uaz-indicators
        imagePullPolicy: IfNotPresent
