contrib/k8s/zenodo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zenodo
  labels:
    app: datamart
    what: zenodo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: datamart
      what: zenodo
  template:
    metadata:
      labels:
        app: datamart
        what: zenodo
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: zenodo
        image: datamart_zenodo
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /usr/src/app/zenodo.json
          subPath: zenodo.json
      volumes:
      - name: config
        configMap:
          name: zenodo
