contrib/k8s/auctus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazo
  labels:
    app: auctus
    what: lazo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: auctus
      what: lazo
  template:
    metadata:
      labels:
        app: auctus
        what: lazo
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: lazo
        image: registry.gitlab.com/vida-nyu/auctus/lazo-index-service:0.7.1
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: lazo
  labels:
    app: auctus
    what: lazo
spec:
  selector:
    app: auctus
    what: lazo
  ports:
  - protocol: TCP
    port: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: auctus
    what: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: auctus
      what: frontend
  template:
    metadata:
      labels:
        app: auctus
        what: frontend
    spec:
      containers:
      - name: nginx
        image: auctus_frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: auctus
    what: frontend
spec:
  selector:
    app: auctus
    what: frontend
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  labels:
    app: auctus
    what: apiserver
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: auctus
      what: apiserver
  template:
    metadata:
      labels:
        app: auctus
        what: apiserver
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: apiserver
        image: auctus_apiserver
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
        volumeMounts:
        - mountPath: /cache
          name: cache
        - mountPath: /usr/src/app/lib_geo/data
          name: geo-data
        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          periodSeconds: 1
          failureThreshold: 2
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache
      - name: geo-data
        persistentVolumeClaim:
          claimName: geo-data
          readOnly: true
      terminationGracePeriodSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  labels:
    app: auctus
    what: apiserver
spec:
  selector:
    app: auctus
    what: apiserver
  ports:
  - protocol: TCP
    port: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator
  labels:
    app: auctus
    what: coordinator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: auctus
      what: coordinator
  template:
    metadata:
      labels:
        app: auctus
        what: coordinator
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: web
        image: auctus_coordinator
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8003
        volumeMounts:
        - mountPath: /cache
          name: cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache
---
apiVersion: v1
kind: Service
metadata:
  name: coordinator
  labels:
    app: auctus
    what: coordinator
spec:
  selector:
    app: auctus
    what: coordinator
  ports:
  - protocol: TCP
    port: 8003
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cache-cleaner
  labels:
    app: auctus
    what: cache-cleaner
spec:
  selector:
    matchLabels:
      app: auctus
      what: cache-cleaner
  template:
    metadata:
      labels:
        app: auctus
        what: cache-cleaner
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: cleaner
        image: auctus_cache_cleaner
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /cache
          name: cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiler
  labels:
    app: auctus
    what: profiler
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 2
  selector:
    matchLabels:
      app: auctus
      what: profiler
  template:
    metadata:
      labels:
        app: auctus
        what: profiler
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: profiler
        image: auctus_profiler
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /cache
          name: cache
        - mountPath: /usr/src/app/lib_geo/data
          name: geo-data
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache
      - name: geo-data
        persistentVolumeClaim:
          claimName: geo-data
          readOnly: true
