contrib/k8s/elasticsearch.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-cluster
  labels:
    app: datamart
    what: elasticsearch
spec:
  selector:
    app: datamart
    what: elasticsearch
  ports:
  - name: transport
    protocol: TCP
    port: 9300
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: datamart
    what: elasticsearch
spec:
  serviceName: elasticsearch-cluster
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: datamart
      what: elasticsearch
  template:
    metadata:
      labels:
        app: datamart
        what: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /_cluster/health?local=true
            port: 9200
          initialDelaySeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
