contrib/k8s/minio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: datamart
    what: minio
spec:
  selector:
    app: datamart
    what: minio
  type: NodePort
  ports:
  - protocol: TCP
    port: 9000
    nodePort: 30900
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minio
  labels:
    app: datamart
    what: minio
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2019-08-29T00-25-01Z
        ports:
        - containerPort: 9000
