contrib/k8s/monitoring.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: elasticsearch-exporter
  clusterIP: None
  ports:
  - protocol: TCP
    port: 9114
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: rabbitmq
  clusterIP: None
  ports:
  - protocol: TCP
    port: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: profiler-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: profiler
  clusterIP: None
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: apiserver
  clusterIP: None
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: coordinator-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: coordinator
  clusterIP: None
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-scrape
  labels:
    app: datamart
    what: monitoring
spec:
  selector:
    app: datamart
    what: elasticsearch-exporter
  clusterIP: None
  ports:
  - protocol: TCP
    port: 9114
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-exporter
  labels:
    app: datamart
    what: elasticsearch-exporter
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: elasticsearch-exporter
    securityContext:
      runAsNonRoot: true
    spec:
      containers:
      - name: elasticsearch-exporter
        image: justwatch/elasticsearch_exporter:1.1.0
        args:
        - "--es.uri=http://elasticsearch:9200"
        - "--es.cluster_settings"
        - "--es.indices"
        - "--es.indices_settings"
        ports:
        - containerPort: 9114
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: datamart
    what: prometheus
spec:
  selector:
    app: datamart
    what: prometheus
  ports:
  - protocol: TCP
    port: 9090
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: datamart
    what: prometheus
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: prometheus
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /prometheus
          name: data
        - mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus
          name: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prometheus
      - name: config
        configMap:
          name: monitoring
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: datamart
    what: grafana
spec:
  selector:
    app: datamart
    what: grafana
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    nodePort: 30030
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: datamart
    what: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: datamart
        what: grafana
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grafana
