contrib/k8s/nominatim.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nominatim
  labels:
    app: datamart
    what: nominatim
spec:
  selector:
    app: datamart
    what: nominatim
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nominatim
  labels:
    app: datamart
    what: nominatim
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: datamart
      what: nominatim
  template:
    metadata:
      labels:
        app: datamart
        what: nominatim
    spec:
      containers:
      - name: nominatim
        image: remram/nominatim:3.3
        args: ["bash", "/app/start.sh"]
        ports:
        - containerPort: 5432
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/lib/postgresql/11/main
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nominatim
