contrib/k8s/test.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-discoverer
  labels:
    app: auctus
    what: test-discoverer
spec:
  selector:
    app: auctus
    what: test-discoverer
  ports:
  - protocol: TCP
    port: 7000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-discoverer
  labels:
    app: auctus
    what: test-discoverer
    test: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auctus
      what: test-discoverer
  template:
    metadata:
      labels:
        app: auctus
        what: test-discoverer
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: discoverer
        image: auctus_test-discoverer
        args: ["testsuite"]
        imagePullPolicy: IfNotPresent
